# liborzklv

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  flake.nix  nohup.out  shell.nix
.github/workflows/: release.yml  rust.yml  test.yml
.zed/: settings.json
include/: library.h
locales/: en.toml
source/: library.c
src/: lib.rs
src/cli/: input.rs
src/string/: transform.rs
src/telegram/: keyboard.rs  mod.rs  timer.rs  topic.rs
src/telegram/i18n/: i18n.rs  inter.rs  language.rs  mod.rs
