[package]
name = "orzklv"
version = "0.0.6"
edition = "2021"
homepage = "https://github.com/orzklv/liborzklv"
repository = "https://github.com/orzklv/liborzklv"
description = "Library consisting various implementation for std and libs by Orzklv"
authors = ["Sokhibjon Orzikulov <orzklv.uz>"]
keywords = ["liborzklv", "orzklv"]
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
telegram = [ "dep:teloxide", "dep:url", "dep:tokio", "dep:async-trait" ]
string = []
cli = []
full = ["telegram", "string", "cli"]

[dependencies]
teloxide = { version = "0.12", optional = true }
url = { version = "2.5.0", optional = true }
tokio = { version = "1.36.0", optional = true }
async-trait = { version = "0.1.77", optional = true }

[dev-dependencies]
serde = "1.0.196"
serde_json = "1.0.113"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "dep_docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
