[package]
name = "orzklv"
version = "0.2.3"
edition = "2021"
homepage = "https://github.com/dark-voyage/liborzklv"
repository = "https://github.com/dark-voyage/liborzklv"
description = "Library consisting various implementation for std and libs by Orzklv"
authors = ["Sokhibjon Orzikulov <orzklv.uz>"]
keywords = ["liborzklv", "orzklv"]
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# For development
# default = ["telegram"]
telegram = [
  "dep:teloxide",
  "dep:url",
  "dep:tokio",
  "dep:async-trait",
  "dep:toml",
]
string = []
cli = []
full = ["telegram", "string", "cli"]

[dependencies]
teloxide = { version = "0.17", optional = true }
url = { version = "2.5", optional = true }
tokio = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
toml = { version = "0.9", optional = true }
thiserror = "2"

[dev-dependencies]
serde = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "dep_docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
